crates/jarvil-parser/tests/snapshots/parser__parses_valid_programs@function_with_args.jv.snap
---
source: compiler/tests/parser.rs
assertion_line: 20
expression: parse_to_ast(&source)
input_file: compiler/tests/corpus/parser/ok/function_with_args.jv
---
=== ast ===
  stmts
    -.CorrectlyIndented.FunctionWrapper.func_decl
      def_keyword.Ok.token: DEF "def"
      name.Ok.name.token: IDENTIFIER "add"
      body
        prototype
          lparen.Ok.token: LPAREN "("
          params
            entity
              name.Ok.name.token: IDENTIFIER "x"
              colon.Ok.token: COLON ":"
              data_ty.Atomic.kind.Ok.token: ATOMIC_TYPE "int"
            remaining_entities
              -.Ok.token: COMMA ","
              -.entity
                name.Ok.name.token: IDENTIFIER "y"
                colon.Ok.token: COLON ":"
                data_ty.Atomic.kind.Ok.token: ATOMIC_TYPE "int"
          rparen.Ok.token: RPAREN ")"
          return_ty
            -.Ok.token: RIGHT_ARROW "->"
            -.Atomic.kind.Ok.token: ATOMIC_TYPE "int"
        colon.Ok.token: COLON ":"
        block
          stmts
            -.CorrectlyIndented.Return
              return_keyword.Ok.token: RETURN "return"
              expr.Binary
                left_expr.Unary.Atomic.Atom.AtomStart.Identifier.Ok.name.token: IDENTIFIER "x"
                operator.Ok.token: PLUS "+"
                right_expr.Unary.Atomic.Atom.AtomStart.Identifier.Ok.name.token: IDENTIFIER "y"
              newline.Ok.token: NEWLINE
          newline.Ok.token: NEWLINE
  newline.Ok.token: NEWLINE

=== diagnostics ===
(no diagnostics)
