crates/jarvil-parser/tests/snapshots/parser__recovers_from_malformed_programs.snap
---
source: compiler/tests/parser.rs
assertion_line: 29
expression: parse_to_ast(&source)
input_file: compiler/tests/corpus/parser/err/missing_colon.jv
---
=== ast ===
  stmts
    -.CorrectlyIndented.FunctionWrapper.func_decl
      def_keyword.Ok.token: DEF "def"
      name.Ok.name.token: IDENTIFIER "main"
      body
        prototype
          lparen.Ok.token: LPAREN "("
          rparen.Ok.token: RPAREN ")"
        colon.MissingTokens
          expected_symbols
            -: ":"
          received_token: NEWLINE
        block
          stmts
            -.CorrectlyIndented.VariableDeclaration
              let_keyword.Ok.token: LET "let"
              name.Ok.name.token: IDENTIFIER "x"
              equal.Ok.token: EQUAL "="
              r_node.Expression
                expr.Unary.Atomic.Integer.Ok.token: INTEGER "1"
                newline.Ok.token: NEWLINE
          newline.Ok.token: NEWLINE
  newline.Ok.token: NEWLINE

=== diagnostics ===
--- diagnostic 1 ---
expected token missing
    Diagnostic severity: error
Begin snippet starting at line 1, column 1

snippet line 1: def main()
    label at line 1, column 11: expected `:`, got `newline`
snippet line 2:     let x = 1
diagnostic code: SyntaxError
